--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "ethers": "^6.2.3",
+    "ethers": "5.7",
     "vue": "^3.2.13",
     "vue-connect-wallet": "^0.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
